stacks (old)/heimdall/base/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:2.4.12
        ports:
        - name: http
          containerPort: 80
        resources:
          limits:
            memory: "350Mi"
          requests:
            memory: "120Mi"
        volumeMounts:
        - name: volv
          readOnly: false
          mountPath: "/config"
        livenessProbe:
          exec:
            command:
            - ls
            - /config/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
        imagePullPolicy: IfNotPresent
  volumeClaimTemplates:
  - metadata:
      name: volv
    spec:
      resources:
        requests:
          storage: 2Gi
      accessModes: ["ReadWriteOnce"]
      storageClassName: "longhorn"
  serviceName: "heimdall"
